# event-sourcing-platform

./: .dockerignore  .gitignore  .gitmodules  .osv-scanner.toml  AGENTS.md  BACKWARDS-COMPATIBILITY-CHECKLIST.md  CHANGELOG.md  CLAUDE.md  DEPENDABOT-ANALYSIS.md  DOCKER-DEPLOY.md  EXEC-SUMMARY_20251106_examples-migration.md  GITHUB-ISSUE-SDK-READ-ALL-EVENTS.md  ISSUES.md  LICENSE  M4-COMPLETE-SUMMARY.md  MIGRATION-GUIDE.md  Makefile  PLAN-SUMMARY.md  PLANNING-PHASE-SUMMARY.md  PROJECT-PLAN_20251105_monorepo-build-system.md  PUBLISHING-STRATEGY.md  README.md  RENOVATE-QUICKSTART.md  SECURITY.md  SESSION-SUMMARY-20251106.md  SESSION-UPDATE-M4-COMPLETE.md  VSA-TOOL-DEMONSTRATION.md  docker-compose.dev.yml  docker-compose.examples.yml  docker-compose.yml  env.docker.example  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  renovate.json  turbo.json
event-sourcing/python/: .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml
event-sourcing/python/src/event_sourcing/: __init__.py
event-sourcing/python/tests/: __init__.py  conftest.py  test_decorators.py
event-sourcing/python/tests/integration/: test_repository.py
event-sourcing/python/tests/unit/: test_aggregate.py  test_checkpoint.py  test_coordinator_gating.py  test_dispatch_context.py  test_event.py  test_expected_version.py  test_fitness.py  test_grpc_client.py  test_grpc_client_registry.py  test_historical_poller.py  test_process_manager.py  test_projection_store.py  test_read_all.py  test_scenario.py
event-sourcing/rust/: Cargo.toml  Makefile
event-sourcing/rust/examples/: README.md  basic_aggregate.rs  order_processing.rs
event-sourcing/rust/src/: aggregate.rs  client.rs  command.rs  error.rs  event.rs  lib.rs  projection.rs  repository.rs
event-store/: Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.dev.yml
event-store/docs/: README.md  brand-exploration.md
event-store/docs-site/: docusaurus.config.ts  package.json  sidebars.ts
event-store/docs-site/src/css/: custom.css
event-store/docs/adrs/: 001-client-proposed-optimistic-concurrency.md
event-store/docs/concepts/: aggregate-pattern.md  event-model.md  event-store-vs-event-bus.md  ubiquitous-language.md
event-store/docs/implementation/: initial-plan_proto-and-clients.md  sdk-design.md
event-store/docs/sdks/: api-reference.md
event-store/docs/sdks/overview/: sdk-overview.md
event-store/docs/sdks/python/: python-sdk.md
event-store/docs/sdks/rust/: rust-sdk.md
event-store/docs/sdks/typescript/: typescript-sdk.md
event-store/eventstore-backend-memory/: Cargo.toml  README.md
event-store/eventstore-backend-memory/src/: lib.rs  store_memory.rs
event-store/eventstore-backend-postgres/: Cargo.toml  README.md
event-store/eventstore-backend-postgres/migrations/: 20250827090000_init.sql  20251210120000_projection_checkpoints.sql
event-store/eventstore-backend-postgres/src/: lib.rs  store_postgres.rs
event-store/eventstore-backend-postgres/tests/: it_postgres.rs
event-store/eventstore-backend-postgres/tests/common/: mod.rs
event-store/eventstore-bin/: Cargo.toml  README.md
event-store/eventstore-bin/src/: lib.rs  main.rs
event-store/eventstore-bin/tests/: service_tests.rs
event-store/eventstore-core/: Cargo.toml  README.md
event-store/eventstore-core/src/: errors.rs  lib.rs  trait_event_store.rs  types.rs
event-store/eventstore-proto/: Cargo.toml  README.md  build.rs
event-store/eventstore-proto/src/: lib.rs
event-store/sdks/: README.md
event-store/sdks/sdk-py/: README.md  pyproject.toml
event-store/sdks/sdk-py/eventstore_sdk_py.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
event-store/sdks/sdk-py/examples/: basic.py
event-store/sdks/sdk-py/sdk_py/: __init__.py  client_rt.py
event-store/sdks/sdk-rs/: Cargo.toml  README.md
event-store/sdks/sdk-rs/examples/: basic.rs
event-store/sdks/sdk-rs/src/: lib.rs
event-store/sdks/sdk-ts/: README.md  package.json  pnpm-lock.yaml  tsconfig.json
event-store/sdks/sdk-ts/src/: client.ts  index.ts  runtime-client.ts
vsa/: .gitignore  CHANGELOG.md  COMMIT-MESSAGE.txt  Cargo.toml  LICENSE  MANUAL-TESTING-GUIDE.md  MILESTONE-5-REVIEW.md  MILESTONE-6-REVIEW.md  Makefile  README.md  TESTING-FRAMEWORK.md  rustfmt.toml
vsa/.github/workflows/: ci.yml  release.yml
vsa/docs/: GETTING-STARTED.md  QUICK-REFERENCE.md
vsa/docs/adrs/: ADR-001-rust-core-multi-language.md  ADR-002-convention-over-configuration.md  ADR-003-bounded-context-structure.md  ADR-004-integration-event-single-source.md  ADR-005-framework-integration-strategy.md
vsa/scripts/: create-test-fixture.sh
vsa/vsa-cli/: Cargo.toml
vsa/vsa-cli/src/: main.rs
vsa/vsa-cli/src/commands/: generate.rs  init.rs  list.rs  manifest.rs  mod.rs  validate.rs
vsa/vsa-cli/src/templates/: context.rs  engine.rs  mod.rs  python.rs  typescript.rs
vsa/vsa-core/: Cargo.toml
vsa/vsa-core/src/: bounded_contexts.rs  config.rs  error.rs  framework.rs  integration_events.rs  lib.rs  manifest.rs  patterns.rs  scanner.rs  validator.rs
vsa/vsa-core/src/domain/: aggregate.rs  command.rs  event.rs  mod.rs  projection.rs  query.rs  upcaster.rs  value_object.rs
vsa/vsa-core/src/scanners/: aggregate_scanner.rs  command_scanner.rs  domain_scanner.rs  event_scanner.rs  mod.rs  projection_scanner.rs  query_scanner.rs  slice_scanner.rs
vsa/vsa-core/src/validation/: bounded_context_rules.rs  consumer_pattern_rules.rs  cross_context_rules.rs  dependency_rules.rs  import_parser.rs  integration_event_rules.rs  isolation_rules.rs  mod.rs  query_slice_rules.rs  (+4 more)
vsa/vsa-core/tests/: integration.rs
vsa/vsa-visualizer/: .eslintrc.js  CONTRIBUTING.md  INSTALL.md  README.md  jest.config.js  package.json  tsconfig.json
vsa/vsa-visualizer/src/: index.ts
vsa/vsa-wasm/: Cargo.toml
vsa/vsa-wasm/src/: lib.rs
vsa/vscode-extension/: .eslintrc.json  .vscodeignore  CHANGELOG.md  Makefile  PUBLISHING.md  README.md  TESTING.md  eslint.config.mjs  package.json  tsconfig.json
vsa/vscode-extension/schemas/: vsa-schema.json
vsa/vscode-extension/src/: codeActions.ts  commands.ts  diagnostics.ts  extension.ts  validation.ts
(+522 files in other folders)
