[workspace]
resolver = "2"
members = [
  "eventstore-proto",
  "eventstore-core",
  "eventstore-backend-memory",
  "eventstore-backend-postgres",
  "eventstore-bin",
  "sdks/sdk-rs",
]

[workspace.package]
version = "0.12.0"
edition = "2021"
authors = ["Event Sourcing Platform Team"]
license = "MIT"
repository = "https://github.com/syntropic137/event-sourcing-platform"
