[project]
name = "event-sourcing-python"
version = "0.6.0-beta"
description = "Python SDK for Event Sourcing patterns and abstractions"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Event Sourcing Platform Team" }
]
keywords = ["event-sourcing", "cqrs", "ddd", "aggregate", "domain-events"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]

dependencies = [
    "pydantic>=2.5",
    "typing-extensions>=4.8",
    "protobuf>=4.25.0",
]

[project.optional-dependencies]
grpc = [
    "grpcio>=1.60",
]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.1",
    "mypy>=1.7",
    "ruff>=0.1",
    "black>=23.11",
    "grpcio-tools>=1.60",
]

[project.urls]
Homepage = "https://github.com/yourorg/event-sourcing-platform"
Repository = "https://github.com/yourorg/event-sourcing-platform/tree/main/event-sourcing/python"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/event_sourcing"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
check_untyped_defs = true
no_implicit_reexport = true
exclude = ["src/event_sourcing/proto/"]

[[tool.mypy.overrides]]
module = "grpc.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "event_sourcing.proto.*"
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = ["src/event_sourcing/proto/**"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
]

[tool.ruff.lint.isort]
known-first-party = ["event_sourcing"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = """
    --strict-markers
    --cov=event_sourcing
    --cov-report=term-missing
    --cov-report=html
"""
markers = [
    "unit: Unit tests (no external dependencies)",
    "integration: Integration tests (requires event-store)",
    "slow: Slow running tests",
]

[tool.coverage.run]
source = ["src/event_sourcing"]
omit = ["*/tests/*", "*/proto/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

