[package]
name = "eventstore-backend-memory"
version = "0.2.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
eventstore-core = { path = "../eventstore-core" }
eventstore-proto = { path = "../eventstore-proto" }
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
tokio-stream = { version = "0.1", features = ["sync"] }
parking_lot = "0.12"
prost = "0.13"
sha2 = "0.10"
