[package]
name = "eventstore-backend-postgres"
version = "0.2.0"
edition = "2021"

[dependencies]
anyhow = "1"
async-trait = "0.1"
eventstore-core = { path = "../eventstore-core" }
eventstore-proto = { path = "../eventstore-proto" }
tokio-stream = "0.1"
thiserror = "1"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "macros", "postgres", "migrate"] }
tokio = { version = "1", features = ["time"] }
futures = "0.3"
prost = "0.13"
sha2 = "0.10"

[features]
default = []
# Enables Postgres integration tests using testcontainers
pg-integration = []
# Enables test utilities for integration tests
test-utils = []

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
testcontainers = "0.17"
testcontainers-modules = { version = "0.5", features = ["postgres"] }
tonic = { version = "0.12", default-features = false }
