[package]
name = "eventstore-backend-postgres"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = "1"
async-trait = "0.1"
eventstore-core = { path = "../eventstore-core" }
eventstore-proto = { path = "../eventstore-proto" }
tokio-stream = "0.1"
thiserror = "2"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "macros", "postgres", "migrate"] }
tokio = { version = "1", features = ["time"] }
futures = "0.3"
prost = "0.14"
sha2 = "0.10"

[features]
default = []
# Enables Postgres integration tests using testcontainers
pg-integration = []
# Enables test utilities for integration tests
test-utils = []

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
testcontainers = "0.20"
testcontainers-modules = { version = "0.8", features = ["postgres"] }
tonic = { version = "0.14", default-features = false }
once_cell = "1.19"

[[test]]
name = "it_postgres"
path = "tests/it_postgres.rs"
required-features = ["test-utils"]
