[package]
name = "eventstore-bin"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tonic = { version = "0.12", features = ["transport"] }
tokio-stream = "0.1"
eventstore-core = { path = "../eventstore-core" }
eventstore-backend-memory = { path = "../eventstore-backend-memory" }
eventstore-proto = { path = "../eventstore-proto" }
tower-http = { version = "0.5", features = ["trace"] }
eventstore-backend-postgres = { path = "../eventstore-backend-postgres" }

[dev-dependencies]
eventstore-backend-postgres = { path = "../eventstore-backend-postgres", features = ["test-utils"] }
serial_test = "3"
testcontainers = "0.20"
testcontainers-modules = { version = "0.5", features = ["postgres"] }
uuid = { version = "1", features = ["v4"] }
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio"] }
