[package]
name = "eventstore-core"
version = "0.2.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
tokio-stream = "0.1"
tonic = { version = "0.12", features = ["prost", "codegen"] }
eventstore-proto = { path = "../eventstore-proto" }
anyhow = "1"
bytes = "1"
prost = "0.13"
prost-types = "0.13"
