[package]
name = "eventstore-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-trait = "0.1"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
tokio-stream = "0.1"
tonic = { version = "0.14", features = ["codegen"] }
eventstore-proto = { path = "../eventstore-proto" }
anyhow = "1"
bytes = "1"
prost = "0.14"
prost-types = "0.14"
