[package]
name = "eventstore-proto"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "eventstore_proto"
path = "src/lib.rs"

[dependencies]
# Tonic and Prost provide the generated types at runtime
prost = "0.13"
prost-types = "0.13"
tonic = { version = "0.12", features = ["transport", "prost", "codegen"] }

[build-dependencies]
prost-build = "0.13"
tonic-build = "0.12"
protoc-bin-vendored = "3"
