[package]
name = "eventstore-proto"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "eventstore_proto"
path = "src/lib.rs"

[dependencies]
# Tonic and Prost provide the generated types at runtime
prost = "0.14"
prost-types = "0.14"
tonic = { version = "0.14", features = ["transport", "codegen"] }
tonic-prost = "0.14"

[build-dependencies]
tonic-prost-build = "0.14"
protoc-bin-vendored = "3"
